@@ -282,7 +282,7 @@ typedef struct {
 	buffer *ssl_verifyclient_username;
 	unsigned short ssl_verifyclient_export_cert;
 
-	unsigned short use_ipv6;
+	unsigned short use_ipv6, set_v6only; /* set_v6only is only a temporary option */
 	unsigned short defer_accept;
 	unsigned short is_ssl;
 	unsigned short allow_http11;
